# automotive-claude-code-agents

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICK_START.md  README.md  README_CN.md  ROADMAP.md  SECURITY.md  SOURCE_OF_TRUTH.md  VERIFY_LAUNCH_READY.sh  create_remaining_commands.sh  docker-compose.yml  install.sh  mkdocs.yml  opencode.json  pyproject.toml  requirements.txt  setup.py  tox.ini  verify_hpc_deliverables.sh  verify_middleware.sh
agents/china-compliance/: automotive-china-compliance-engineer.md
rules/china-standards/: automotive-china-mandatory-standards.md
skills/: NEW_DOMAINS_SUMMARY.md  README_NEW_DOMAINS.md  SKILLS_INVENTORY.txt
skills/_templates/: README.md  agent-template.yaml  skill-template.yaml  workflow-template.yaml
skills/access-control/: biometric-001.yaml  biometric-002.yaml  biometric-003.yaml  biometric-004.yaml  biometric-005.yaml  biometric-006.yaml  biometric-007.yaml  biometric-008.yaml  biometric-009.yaml  biometric-010.yaml  nfc-key-001.yaml  nfc-key-002.yaml  nfc-key-003.yaml  nfc-key-004.yaml  nfc-key-005.yaml  nfc-key-006.yaml  nfc-key-007.yaml  nfc-key-008.yaml  nfc-key-009.yaml  nfc-key-010.yaml  phone-as-key-001.yaml  phone-as-key-002.yaml  phone-as-key-003.yaml  phone-as-key-004.yaml  phone-as-key-005.yaml  phone-as-key-006.yaml  phone-as-key-007.yaml  phone-as-key-008.yaml  phone-as-key-009.yaml  phone-as-key-010.yaml  smart-key-001.yaml  smart-key-002.yaml  smart-key-003.yaml  smart-key-004.yaml  smart-key-005.yaml  smart-key-006.yaml  smart-key-007.yaml  smart-key-008.yaml  smart-key-009.yaml  smart-key-010.yaml
skills/adas/: adaptive-cruise-control-001.yaml  adaptive-cruise-control-002.yaml  adaptive-cruise-control-003.yaml  adaptive-cruise-control-004.yaml  adaptive-cruise-control-005.yaml  adaptive-cruise-control-006.yaml  adaptive-cruise-control-007.yaml  adaptive-cruise-control-008.yaml  adaptive-cruise-control-009.yaml  adaptive-cruise-control-010.yaml  adaptive-cruise-control-011.yaml  adaptive-cruise-control-012.yaml  adaptive-cruise-control-013.yaml  adaptive-cruise-control-014.yaml  adaptive-cruise-control-015.yaml  adaptive-cruise-control-016.yaml  adaptive-cruise-control-017.yaml  adaptive-cruise-control-018.yaml  adaptive-cruise-control-019.yaml  adaptive-cruise-control-020.yaml  adaptive-cruise-control-021.yaml  adaptive-cruise-control-022.yaml  adaptive-cruise-control-023.yaml  adaptive-cruise-control-024.yaml  adaptive-cruise-control-025.yaml  automated-parking-001.yaml  automated-parking-002.yaml  automated-parking-003.yaml  automated-parking-005.yaml  automated-parking-006.yaml  automated-parking-007.yaml  automated-parking-010.yaml  automated-parking-011.yaml  automated-parking-013.yaml  automated-parking-014.yaml  automated-parking-015.yaml  automated-parking-016.yaml  automated-parking-017.yaml  automated-parking-018.yaml  automated-parking-019.yaml  (+305 more)
skills/advanced-materials/: acoustic-materials.yaml  adhesive-technology.yaml  aerogel-insulation.yaml  ahss-ultra-high-strength-steel.yaml  aluminum-joining.yaml  anti-microbial-surfaces.yaml  bio-based-plastics.yaml  cfrp-composites.yaml  corrosion-engineering.yaml  crashworthiness-materials.yaml  electroactive-polymers.yaml  fatigue-analysis.yaml  glass-technology.yaml  graphene-applications.yaml  magnesium-alloys.yaml  magneto-rheological-fluids.yaml  metamaterials.yaml  multi-material-design.yaml  nanomaterials-automotive.yaml  piezoelectric-materials.yaml  rubber-elastomers.yaml  self-healing-coatings.yaml  shape-memory-alloys.yaml  thermal-interface-materials.yaml  thermoelectric-materials.yaml
skills/audio/: active-noise-cancellation-001.yaml  active-noise-cancellation-002.yaml  active-noise-cancellation-003.yaml  active-noise-cancellation-004.yaml  active-noise-cancellation-005.yaml  active-noise-cancellation-006.yaml  active-noise-cancellation-007.yaml  active-noise-cancellation-008.yaml  active-noise-cancellation-009.yaml  active-noise-cancellation-010.yaml  amplifier-001.yaml  amplifier-002.yaml  amplifier-003.yaml  amplifier-004.yaml  amplifier-005.yaml  amplifier-006.yaml  amplifier-007.yaml  amplifier-008.yaml  amplifier-009.yaml  amplifier-010.yaml  sound-tuning-001.yaml  sound-tuning-002.yaml  sound-tuning-003.yaml  sound-tuning-004.yaml  sound-tuning-005.yaml  sound-tuning-006.yaml  sound-tuning-007.yaml  sound-tuning-008.yaml  sound-tuning-009.yaml  sound-tuning-010.yaml  speakers-001.yaml  speakers-002.yaml  speakers-003.yaml  speakers-004.yaml  speakers-005.yaml  speakers-006.yaml  speakers-007.yaml  speakers-008.yaml  speakers-009.yaml  speakers-010.yaml
skills/automotive-adas/: adas-features-implementation.md  autosar-adas-integration.md  camera-processing-vision.md  hd-maps-localization.md  path-planning-control.md  radar-lidar-processing.md  sensor-fusion-perception.md
skills/automotive-ai-ecu/: camera-vision-ai.md  driver-monitoring-systems.md  edge-ai-deployment.md  neural-processing-units.md  voice-nlu-automotive.md
skills/automotive-china-l2-adas-compliance/: china-l2-adas-compliance.md
skills/automotive-china-l3-ads-compliance/: china-l3-ads-compliance.md
skills/automotive-china-parking-compliance/: china-parking-compliance.md
skills/automotive-china-standards-overview/: china-standards-overview.md
skills/automotive-cybersecurity/: intrusion-detection-prevention.md  iso-21434-compliance.md  penetration-testing-automotive.md  secure-boot-chain.md  secure-software-development.md  vehicle-pki-crypto.md
skills/automotive-dfm-benchmarking/: dfm-benchmarking.md
skills/automotive-diagnostics/: DIAGNOSTICS_DELIVERABLES.md  diagnostic-tooling.md  doip-ethernet-diagnostics.md  dtc-management.md  flash-reprogramming.md  obd-ii-standards.md  odx-diagnostic-databases.md  uds-iso14229-protocol.md
skills/automotive-ecu-systems/: README.md  (+8 more)
tests/: conftest.py
(+4355 files in other folders)
